--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -2,13 +2,18 @@
   height: 70px;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-bottom: 25px;
+  background-color: antiquewhite;
 
   .logo-container {
     height: 100%;
     width: 70px;
     padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .options {
